# EPICFileShareClient

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  WarningsExample.cpp  X3DH.cpp  loginpage.cpp  loginpage.h  main.cpp
.github/workflows/: clang-tidy.yml
Backend/Decryption/: DecryptionManager.cpp  DecryptionManager.h
FrontEnd/ChangePasswordPage/: changepasswordpage.cpp  changepasswordpage.h  changepasswordpage.ui
FrontEnd/HomePage/: home.cpp  home.h  home.ui  homepage.cpp  homepage.h  homepage.ui
FrontEnd/LandingPage/: landingpage.cpp  landingpage.h  landingpage.ui
FrontEnd/LoginPage/: loginManager.cpp  loginManager.h  loginpage.cpp  loginpage.h  loginpage.ui
FrontEnd/ProfilePage/: ProfilePage.cpp  ProfilePage.h  profilepage.ui
FrontEnd/ReceivedFilesPage/: receivedfilesmanager.cpp  receivedfilesmanager.h
FrontEnd/RecievedFiles/: recievedfilespage.cpp  recievedfilespage.h  recievedfilespage.ui
FrontEnd/RegisterPage/: registerManager.cpp  registerManager.h  registerpage.cpp  registerpage.h  registerpage.ui
FrontEnd/RegistorPage/: registorpage.cpp  registorpage.h  registorpage.ui
FrontEnd/SentFiles/: sentfilesmanager.cpp  sentfilesmanager.h  sentfilespage.cpp  sentfilespage.h  sentfilespage.ui
FrontEnd/SessionManager/: SessionManager.cpp  SessionManager.h
FrontEnd/UploadPage/: uploadManager.cpp  uploadManager.h  uploadpage.cpp  uploadpage.h  uploadpage.ui
Network/: uploadManager.cpp  uploadManager.h
Password/: PasswordHashing.cpp  PasswordHashing.h
Testing/: X3DHTest.cpp  X3DHTest.h  authenticationTests.cpp  authenticationTests.h  networkTests.cpp  networkTests.h
X3DH/: X3DH.cpp  X3DH.h  X3DH_reciever.cpp  X3DH_sender.cpp  X3DH_shared.h
auth/: AuthProtocol.cpp  AuthProtocol.h  AuthenticationManager.cpp  AuthenticationManager.h  CommonPasswordChecker.cpp  CommonPasswordChecker.h  PasswordValidator.cpp  PasswordValidator.h  RateLimiter.cpp  RateLimiter.h  UserAuthentication.cpp  UserAuthentication.h  validation.cpp  validation.h
crypto/: crypto_utils.cpp  crypto_utils.h
key_management/: DataEncryptionKey.cpp  DataEncryptionKey.h  EncryptionKeyGenerator.cpp  EncryptionKeyGenerator.h  FileKeyManager.cpp  FileKeyManager.h  KEKManager.cpp  KEKManager.h  KeyEncryptor.cpp  KeyEncryptor.h  MasterKeyDerivation.cpp  MasterKeyDerivation.h  UserKeyGenerator.cpp  UserKeyGenerator.h
key_management/X3DHKeys/: EphemeralKeyPair.cpp  EphemeralKeyPair.h  IdentityKeyPair.cpp  IdentityKeyPair.h  OneTimeKeyPair.cpp  OneTimeKeyPair.h  SignedPreKeyPair.cpp  SignedPreKeyPair.h
